adams_cluster/home/home-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: home-website
  labels:
    app: home-website
    type: frontend
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
    volumeMounts:
    - name: html-volume
      mountPath: /usr/share/nginx/html
    - name: nginx-config
      mountPath: /etc/nginx/conf.d/default.conf
      subPath: default.conf
  volumes:
  - name: html-volume
    configMap:
      name: nginx-html
      items:
      - key: index.html
        path: index.html
      - key: print.js
        path: print.js
  - name: nginx-config
    configMap:
      name: nginx-html
      defaultMode: 0644
      items:
      - key: default.conf
        path: default.conf
