adams_cluster/home/home-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: adams-cluster.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home-nodeport-service
            port:
              number: 80
